--- a/src/app/main-content/legal-notice/legal-notice.component.scss
+++ b/src/app/main-content/legal-notice/legal-notice.component.scss
@@ -15,10 +15,13 @@
 .section-legal-notice {
   max-width: calc($appMaxWidth - $navbar-width);
   width: 100%;
-  padding: 2rem;
+  height: calc(100svh - 96px);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+  overflow-y: auto;
+  padding: 1rem;
 
   
   h2 {
@@ -68,6 +71,7 @@
 
   .paragraph {
     @include dFlex($ai: flex-start);
+    justify-content: flex-start;
     flex-direction: column;
     @include appMaxWidth($padding: 1rem);
     font-size: 1rem;
